--- a/index.html
+++ b/index.html
@@ -6,22 +6,14 @@
     <meta name="description" content="WDD 131 – Dynamic Web Fundamentals - SP Web & Software Solution">
     <meta name="author" content="SP Web & Software Solution">
     <title>WDD 131 – Sunday Prince Augustine</title>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/base.css">
     <script src="scripts/getdates.js" defer></script>
-    <style>
-        .categories-container {
-            display: flex;
-            justify-content: space-between;
-            gap: 20px;
-        }
-        .card {
-            flex: 1;
-            padding: 20px;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            background-color: #f9f9f9;
-        }
-    </style>
 </head>
 <body>
     <div class="header-background">
