--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="location">
                     <h3><strong>Akwa Ibom State, Nigeria</strong></h3>
                     <p>Madagascar is the 4th largest island in the world and is located in the Indian Ocean. It is home to 5% of the world's plant and animal species, of which more than 80% are endemic to Madagascar. The island is best known for its lemurs, baobab trees, and vanilla.</p>
-                    <img src="Nigeria-flag.jpg" alt="Official Flag of Nigeria" class="flag">
+                    <img src="nigeria-flag.jpg" alt="Official Flag of Nigeria" class="flag">
                 </div>
             </section>
             
