--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="WDD 131 – Dynamic Web Fundamentals - SP Web & Software Solution">
     <meta name="author" content="SP Web & Software Solution">
-    <title>WDD 131 – Sunday Prince Augustine</title>
+    <title>"WDD 131 – Dynamic Web Fundamentals - Sunday Prince Augustine"</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
