"Update State Description"

--- a/index.html
+++ b/index.html
@@ -44,7 +44,39 @@
                 </div>
                 <div class="location">
                     <h3><strong>Akwa Ibom State, Nigeria</strong></h3>
-                    <p>Madagascar is the 4th largest island in the world and is located in the Indian Ocean. It is home to 5% of the world's plant and animal species, of which more than 80% are endemic to Madagascar. The island is best known for its lemurs, baobab trees, and vanilla.</p>
+                    <p> Akwa Ibom State is a coastal state in southern Nigeria, known for its rich cultural heritage, natural resources, and growing economy. It was created from Cross River State on September 23, 1987, and is one of Nigeria's major oil-producing states.
+
+                        Geography & Location
+                        Located in Nigeria’s South-South geopolitical zone.
+                        Shares borders with Cross River State (east), Abia State (north), Rivers State (west), and the Atlantic Ocean (south).
+                        The state is home to numerous rivers, mangrove swamps, and tropical rainforests.
+                        Capital & Major Cities
+                        Uyo (State Capital) – A fast-growing city with modern infrastructure, universities, and a thriving hospitality industry.
+                        Eket – Known for oil production and major petroleum companies.
+                        Ikot Ekpene – Famous for its cultural history and raffia craft industry.
+                        Culture & Language
+                        Major ethnic groups: Ibibio, Annang, Oron, Eket, and Obolo.
+                        Ibibio language is the most widely spoken, but English is the official language.
+                        The people are known for their hospitality, traditional dances, masquerades, and colorful festivals.
+                        Economy & Natural Resources
+                        Oil & Gas: Akwa Ibom is one of Nigeria’s largest oil and gas-producing states, contributing significantly to the country’s economy.
+                        Agriculture: The state produces palm oil, cocoa, rubber, cassava, and seafood.
+                        Tourism: Attractions include Ibeno Beach (Nigeria’s longest beach), the Amalgamation House, and Ibom Plaza.
+                        Technology & Development: Uyo is becoming a tech hub, with increasing investment in digital innovation and infrastructure.
+                        Education & Institutions
+                        Home to top institutions like the University of Uyo (UNIUYO), Akwa Ibom State University (AKSU), and Ibom Air flight academy.
+                        The state government invests heavily in education, skill development, and digital technology.
+                        Tourist Attractions
+                        Ibeno Beach – The longest sand beach in West Africa, great for relaxation and water sports.
+                        Ibom Icon Hotel & Golf Resort – A luxury resort attracting tourists and business executives.
+                        Godswill Akpabio International Stadium – A world-class sports facility for international events.
+                        National Museum, Uyo – Showcasing the history and cultural heritage of the state.
+                        Fun Facts
+                        ✅ Akwa Ibom is known as the "Land of Promise."
+                        ✅ Ibom Air is Nigeria’s first state-owned airline.
+                        ✅ It has one of the highest literacy rates in Nigeria.
+                        
+                        Akwa Ibom is a beautiful, resource-rich, and rapidly developing state, making it one of the most significant regions in Nigeria today. 🚀.</p>
                     <img src="nigeria-flag.jpg" alt="Official Flag of Nigeria" class="flag">
                 </div>
             </section>
