--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     </main>
     
     <footer>
-        <p>&copy; <span id="currentyear"></span> SP Web & Software Solution - Nigeria</p>
+        <p>&copy; <span id="currentyear"></span> 2025 - SP Web & Software Solution - Nigeria ! Sunday Prince Augustine @ Brigham Young University- Idaho</p>
         <p id="lastModified">Last Modification: <span></span></p>
     </footer>
 </body>
