"Update HTML, CSS"

--- a/temples.html
+++ b/temples.html
@@ -24,42 +24,15 @@
     <main>
         <h1>Beautiful Temples Around the World</h1>
         <div class="gallery">
-            <figure>
-                <img src="images/temple1.jpg" alt="San Diego California Temple">
-                <figcaption>San Diego California</figcaption>
-            </figure>
-            <figure>
-                <img src="images/temple2.jpg" alt="Salt Lake Temple">
-                <figcaption>Salt Lake Temple</figcaption>
-            </figure>
-            <figure>
-                <img src="images/temple3.jpg" alt="Laie Hawaii Temple">
-                <figcaption>Laie Hawaii Temple</figcaption>
-            </figure>
-            <figure>
-                <img src="images/temple4.jpg" alt="Nauvoo Temple">
-                <figcaption>Nauvoo Temple</figcaption>
-            </figure>
-            <figure>
-                <img src="images/temple5.jpg" alt="Paris France Temple">
-                <figcaption>Paris France Temple</figcaption>
-            </figure>
-            <figure>
-                <img src="images/temple6.jpg" alt="Accra Ghana Temple">
-                <figcaption>Accra Ghana Temple</figcaption>
-            </figure>
-            <figure>
-                <img src="images/temple7.jpg" alt="Buenos Aires Argentina Temple">
-                <figcaption>Buenos Aires Argentina Temple</figcaption>
-            </figure>
-            <figure>
-                <img src="images/temple8.jpg" alt="Logan Utah Temple">
-                <figcaption>Logan Utah Temple</figcaption>
-            </figure>
-            <figure>
-                <img src="images/temple9.jpg" alt="Hong Kong China Temple">
-                <figcaption>Hong Kong China Temple</figcaption>
-            </figure>
+            <figure><img src="images/temple1.jpg" alt="San Diego California Temple"><figcaption>San Diego California</figcaption></figure>
+            <figure><img src="images/temple2.jpg" alt="Salt Lake Temple"><figcaption>Salt Lake Temple</figcaption></figure>
+            <figure><img src="images/temple3.jpg" alt="Laie Hawaii Temple"><figcaption>Laie Hawaii Temple</figcaption></figure>
+            <figure><img src="images/temple4.jpg" alt="Nauvoo Temple"><figcaption>Nauvoo Temple</figcaption></figure>
+            <figure><img src="images/temple5.jpg" alt="Paris France Temple"><figcaption>Paris France Temple</figcaption></figure>
+            <figure><img src="images/temple6.jpg" alt="Accra Ghana Temple"><figcaption>Accra Ghana Temple</figcaption></figure>
+            <figure><img src="images/temple7.jpg" alt="Buenos Aires Argentina Temple"><figcaption>Buenos Aires Argentina Temple</figcaption></figure>
+            <figure><img src="images/temple8.jpg" alt="Logan Utah Temple"><figcaption>Logan Utah Temple</figcaption></figure>
+            <figure><img src="images/temple9.jpg" alt="Hong Kong China Temple"><figcaption>Hong Kong China Temple</figcaption></figure>
         </div>
     </main>
 
