"Update Temples Page"

--- a/temples.html
+++ b/temples.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
     <script defer src="scripts/temples.js"></script>
+    <style>
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+            justify-items: center;
+        }
+
+        .gallery figure {
+            width: 100%;
+            max-width: 400px;
+            text-align: center;
+        }
+
+        .gallery img {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -24,20 +44,20 @@
     <main>
         <h1>Beautiful Temples Around the World</h1>
         <div class="gallery">
-            <figure><img src="images/temple1.jpg" alt="San Diego California Temple"><figcaption>San Diego California</figcaption></figure>
-            <figure><img src="images/temple2.jpg" alt="Salt Lake Temple"><figcaption>Salt Lake Temple</figcaption></figure>
-            <figure><img src="images/temple3.jpg" alt="Laie Hawaii Temple"><figcaption>Laie Hawaii Temple</figcaption></figure>
-            <figure><img src="images/temple4.jpg" alt="Nauvoo Temple"><figcaption>Nauvoo Temple</figcaption></figure>
-            <figure><img src="images/temple5.jpg" alt="Paris France Temple"><figcaption>Paris France Temple</figcaption></figure>
-            <figure><img src="images/temple6.jpg" alt="Accra Ghana Temple"><figcaption>Accra Ghana Temple</figcaption></figure>
-            <figure><img src="images/temple7.jpg" alt="Buenos Aires Argentina Temple"><figcaption>Buenos Aires Argentina Temple</figcaption></figure>
-            <figure><img src="images/temple8.jpg" alt="Logan Utah Temple"><figcaption>Logan Utah Temple</figcaption></figure>
-            <figure><img src="images/temple9.jpg" alt="Hong Kong China Temple"><figcaption>Hong Kong China Temple</figcaption></figure>
+            <figure><img src="San_Diego.jpg" alt="San Diego California Temple"><figcaption>San Diego California</figcaption></figure>
+            <figure><img src="salt-lake.jpg" alt="Salt Lake Temple"><figcaption>Salt Lake Temple</figcaption></figure>
+            <figure><img src="Laie.jpg" alt="Laie Hawaii Temple"><figcaption>Laie Hawaii Temple</figcaption></figure>
+            <figure><img src="Nauvoo.jpg" alt="Nauvoo Temple"><figcaption>Nauvoo Temple</figcaption></figure>
+            <figure><img src="aba_nigeria_temple.webp" alt="Aba Nigeria Temple"><figcaption>Paris France Temple</figcaption></figure>
+            <figure><img src="accra.jpg" alt="Accra Ghana Temple"><figcaption>Accra Ghana Temple</figcaption></figure>
+            <figure><img src="Buenos.jpg" alt="Buenos Aires Argentina Temple"><figcaption>Buenos Aires Argentina Temple</figcaption></figure>
+            <figure><img src="Logan.jpg" alt="Logan Utah Temple"><figcaption>Logan Utah Temple</figcaption></figure>
+            <figure><img src="hong-kong.jpg" alt="Hong Kong China Temple"><figcaption>Hong Kong China Temple</figcaption></figure>
         </div>
     </main>
 
     <footer>
-        <p>&copy; <span id="year"></span> | SP International Digital Official</p>
+        <p>&copy; <span id="year"></span> | 2025 - SP Web & Software Solution - Nigeria ! Sunday Prince Augustine @ Brigham Young University- Idaho</p>
         <p>Last modified: <span id="lastModified"></span></p>
     </footer>
 </body>
