"Update Page Images"

--- a/temples.html
+++ b/temples.html
@@ -43,6 +43,7 @@
 
     <main>
         <h1>Beautiful Temples Around the World</h1>
+        <h2>Home</h2>
         <div class="gallery">
             <figure><img src="San_Diego.jpg" alt="San Diego California Temple"><figcaption>San Diego California</figcaption></figure>
             <figure><img src="salt-lake.jpg" alt="Salt Lake Temple"><figcaption>Salt Lake Temple</figcaption></figure>
