--- a/temples.html
+++ b/temples.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Here's are the beautiful Temples around the World<">
+    <meta name="author" content="Sunday Prince Augustine">
     <title>Temple Album</title>
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
     <script defer src="scripts/temples.js"></script>
     <style>
+        <body
         .gallery {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
@@ -42,14 +45,14 @@
     </header>
 
     <main>
-        <h1>Beautiful Temples Around the World</h1>
+        <h1>Beautiful "Temples" Around the World</h1>
         <h2>Home</h2>
         <div class="gallery">
             <figure><img src="San_Diego.jpg" alt="San Diego California Temple"><figcaption>San Diego California</figcaption></figure>
             <figure><img src="salt-lake.jpg" alt="Salt Lake Temple"><figcaption>Salt Lake Temple</figcaption></figure>
             <figure><img src="Laie.jpg" alt="Laie Hawaii Temple"><figcaption>Laie Hawaii Temple</figcaption></figure>
             <figure><img src="Nauvoo.jpg" alt="Nauvoo Temple"><figcaption>Nauvoo Temple</figcaption></figure>
-            <figure><img src="aba_nigeria_temple.webp" alt="Aba Nigeria Temple"><figcaption>Paris France Temple</figcaption></figure>
+            <figure><img src="aba_nigeria_temple.webp" alt="Aba Nigeria Temple"><figcaption>Aba Nigeria Temple</figcaption></figure>
             <figure><img src="accra.jpg" alt="Accra Ghana Temple"><figcaption>Accra Ghana Temple</figcaption></figure>
             <figure><img src="Buenos.jpg" alt="Buenos Aires Argentina Temple"><figcaption>Buenos Aires Argentina Temple</figcaption></figure>
             <figure><img src="Logan.jpg" alt="Logan Utah Temple"><figcaption>Logan Utah Temple</figcaption></figure>
