--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WDD 131 – Dynamic Web Fundamentals - SP Web & Software Solution">
-    <meta name="author" content="SP Web & Software Solution">
+    <meta name="description" content="WDD 131 – Dynamic Web Fundamentals - Sunday Prince Augustine">
+    <meta name="author" content="Sunday Prince Augustine">
     <title>"WDD 131 – Dynamic Web Fundamentals - Sunday Prince Augustine"</title>
 
     <!-- Google Fonts -->
