--- a/temples.html
+++ b/temples.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Here's are the beautiful Temples around the World<">
+    <meta name="description" content="Here's are the beautiful Temples around the World">
     <meta name="author" content="Sunday Prince Augustine">
     <title>Temple Album</title>
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
     <script defer src="scripts/temples.js"></script>
     <style>
-        <body
         .gallery {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
