--- a/temples.html
+++ b/temples.html
@@ -44,7 +44,7 @@
     </header>
 
     <main>
-        <h1>Beautiful "Temples" Around the World</h1>
+        <h1>Temple Wonders Around the World</h1>
         <h2>Home</h2>
         <div class="gallery">
             <figure><img src="San_Diego.jpg" alt="San Diego California Temple"><figcaption>San Diego California</figcaption></figure>
