--- a/temples.html
+++ b/temples.html
@@ -44,8 +44,8 @@
     </header>
 
     <main>
-        <h1>Temple Wonders Around the World.</h1>
-        <h2>TEMPLES</h2>
+        <h1><h1>Temple Album: Wonders Around the World</h1>
+        <h2>Home</h2>
         <div class="gallery">
             <figure><img src="San_Diego.jpg" alt="San Diego California Temple"><figcaption>San Diego California</figcaption></figure>
             <figure><img src="salt-lake.jpg" alt="Salt Lake Temple"><figcaption>Salt Lake Temple</figcaption></figure>
