"Update HTML Page"

--- a/temples.html
+++ b/temples.html
@@ -24,7 +24,7 @@
     </header>
 
     <main>
-        <h1>Temple Album - Explore Temple Wonders Around the World</h1>
+        <h1>Explore Temple Wonders Around the World</h1>
         <h2>Home</h2>
         <div class="gallery">
             <figure><img src="San_Diego.jpg" alt="San Diego California Temple"><figcaption>San Diego California</figcaption></figure>
