--- a/temples.html
+++ b/temples.html
@@ -6,13 +6,22 @@
     <meta name="description" content="Here's are the beautiful Temples around the World">
     <meta name="author" content="Sunday Prince Augustine">
     <title>Temple Album</title>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Poppins:ital,wght@400;700&display=swap" rel="stylesheet">
+
+    <!-- External CSS -->
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
+
+    <!-- JavaScript -->
     <script defer src="scripts/temples.js"></script>
 </head>
 <body>
     <header>
-        <h1>Temple Album</h1>
+        <h1 class="bangers-regular">Temple Album</h1>
         <button id="menu-toggle" aria-label="Toggle menu">☰</button>
         <nav id="nav-menu">
             <a href="#">Home</a>
@@ -24,8 +33,8 @@
     </header>
 
     <main>
-        <h1>Explore Temple Wonders Around the World</h1>
-        <h2>Home</h2>
+        <h1 class="poppins-bold">Explore Temple Wonders Around the World</h1>
+        <h2 class="poppins-bold">Home</h2>
         <div class="gallery">
             <figure><img src="San_Diego.jpg" alt="San Diego California Temple"><figcaption>San Diego California</figcaption></figure>
             <figure><img src="salt-lake.jpg" alt="Salt Lake Temple"><figcaption>Salt Lake Temple</figcaption></figure>
