"Update HTML, CSS"

--- a/temples.html
+++ b/temples.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Here's are the beautiful Temples around the World">
+    <meta name="description" content="Here are the beautiful temples around the world.">
     <meta name="author" content="Sunday Prince Augustine">
     <title>Temple Album</title>
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
     <!-- External CSS -->
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
@@ -20,7 +21,7 @@
 </head>
 <body>
     <header>
-        <h1 class="bangers-regular">Temple Album</h1>
+        <h1 class="bangers-regular">Temple Wonders Around the World</h1>
         <button id="menu-toggle" aria-label="Toggle menu">☰</button>
         <nav id="nav-menu">
             <a href="#">Home</a>
@@ -32,8 +33,7 @@
     </header>
 
     <main>
-        <h1 class="poppins-bold">Explore Temple Wonders Around the World</h1>
-        <h2 class="poppins-bold">Home</h2>
+        <h2 class="poppins-bold">Explore Sacred Temples</h2>
         <div class="gallery">
             <figure><img src="San_Diego.jpg" alt="San Diego California Temple"><figcaption>San Diego California</figcaption></figure>
             <figure><img src="salt-lake.jpg" alt="Salt Lake Temple"><figcaption>Salt Lake Temple</figcaption></figure>
@@ -48,7 +48,7 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="year"></span> | 2025 - SP Web & Software Solution - Nigeria ! Sunday Prince Augustine @ Brigham Young University- Idaho</p>
+        <p>&copy; | 2025 - SP Web & Software Solution - Nigeria | Sunday Prince Augustine @ Brigham Young University-Idaho</p>
         <p>Last modified: <span id="lastModified"></span></p>
     </footer>
 </body>
