--- a/place.html
+++ b/place.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Country Page</title>
+    <meta name="description" content="<meta name="description" content="Discover sacred temples and their historical significance from around the world. Explore stunning architectural wonders and cultural heritage.">    ">
+    <meta name="author" content="Sunday Prince Augustine">
     <link rel="stylesheet" href="styles/styles.css">
     <script defer src="scripts/script.js"></script>
 </head>
@@ -15,9 +17,9 @@
     <main>
         <section class="hero">
             <picture>
-                <source srcset="images/hero-small.webp" media="(max-width: 600px)">
-                <source srcset="images/hero-large.webp" media="(min-width: 601px)">
-                <img src="images/hero-large.webp" alt="Hero Image">
+                <source srcset="hero-small.webp" media="(max-width: 600px)">
+                <source srcset="hero-large.webp" media="(min-width: 601px)">
+                <img src="hero-large.webp" alt="Hero Image">
             </picture>
         </section>
 
