"Update Place Page HTML"

--- a/place.html
+++ b/place.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Country Page</title>
-    <meta name="description" content="<meta name="description" content="Discover sacred temples and their historical significance from around the world. Explore stunning architectural wonders and cultural heritage.">    ">
+    <meta name="description" content="Discover sacred temples and their historical significance from around the world. Explore stunning architectural wonders and cultural heritage.">
     <meta name="author" content="Sunday Prince Augustine">
     <link rel="stylesheet" href="styles/styles.css">
     <script defer src="scripts/script.js"></script>
@@ -16,6 +16,7 @@
     
     <main>
         <section class="hero">
+            <h2>Explore Your Country</h2> <!-- ✅ Added to fix the missing section heading issue -->
             <picture>
                 <source srcset="hero-small.webp" media="(max-width: 600px)">
                 <source srcset="hero-large.webp" media="(min-width: 601px)">
@@ -33,7 +34,8 @@
     </main>
 
     <footer>
-        <p>&copy; <span id="year"></span> | Last Modified: <span id="lastModified"></span></p>
+        <p>&copy; | 2025 - SP Web & Software Solution - Nigeria | Sunday Prince Augustine @ Brigham Young University-Idaho</p>
+        <p>Last modified: <span id="lastModified"></span></p>
     </footer>
 </body>
 </html>
