--- a/place.html
+++ b/place.html
@@ -6,17 +6,27 @@
     <title>Country Page</title>
     <meta name="description" content="Discover sacred temples and their historical significance from around the world. Explore stunning architectural wonders and cultural heritage.">
     <meta name="author" content="Sunday Prince Augustine">
+    
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <!-- External CSS -->
     <link rel="stylesheet" href="styles/styles.css">
+
+    <!-- JavaScript -->
     <script defer src="scripts/script.js"></script>
 </head>
 <body>
     <header>
-        <h1>Your Chosen Country</h1>
+        <h1 class="bangers-regular">Your Chosen Country</h1>
+        <h2 class="poppins-bold">Nigeria</h2>
     </header>
     
     <main>
         <section class="hero">
-            <h2>Explore Your Country</h2> <!-- ✅ Added to fix the missing section heading issue -->
+            <h2 class="poppins-bold">Explore Your Country</h2> 
             <picture>
                 <source srcset="hero-small.webp" media="(max-width: 600px)">
                 <source srcset="hero-large.webp" media="(min-width: 601px)">
@@ -25,11 +35,21 @@
         </section>
 
         <section class="weather">
-            <h2>Weather</h2>
+            <h2 class="poppins-bold">Weather</h2>
             <p>Temperature: <span id="temp">10</span>°C</p>
             <p>Wind Speed: <span id="wind-speed">5</span> km/h</p>
             <p>Wind Chill: <span id="wind-chill">N/A</span></p>
             <p id="weather-icon">⛅</p>
+        </section>
+
+        <section class="info">
+            <h2 class="poppins-bold">Interesting Facts</h2>
+            <ul>
+                <li>Nigeria is the most populous country in Africa.</li>
+                <li>It has over 250 ethnic groups and 500 languages.</li>
+                <li>The country is rich in oil and natural resources.</li>
+                <li>The Nollywood film industry is the second largest in the world.</li>
+            </ul>
         </section>
     </main>
 
