--- a/place.html
+++ b/place.html
@@ -3,59 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Country Page</title>
-    <meta name="description" content="Discover sacred temples and their historical significance from around the world. Explore stunning architectural wonders and cultural heritage.">
-    <meta name="author" content="Sunday Prince Augustine">
-    
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-    <!-- External CSS -->
-    <link rel="stylesheet" href="styles/styles.css">
-
-    <!-- JavaScript -->
-    <script defer src="scripts/script.js"></script>
+    <title>Akwa Ibom State, Nigeria</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            text-align: center;
+            background-color: #f0f0f0;
+        }
+        .header {
+            background-color: #d32f2f;
+            color: white;
+            padding: 20px;
+            font-size: 28px;
+            font-weight: bold;
+        }
+        .container {
+            padding: 20px;
+            max-width: 900px;
+            margin: 0 auto;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .image-section {
+            width: 100%;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        .image-section img {
+            width: 100%;
+            border-radius: 10px;
+        }
+        .data-section, .weather-section {
+            margin: 20px auto;
+            padding: 20px;
+            max-width: 600px;
+            background: #f5f5f5;
+            border-radius: 10px;
+            text-align: left;
+        }
+        .data-section h2, .weather-section h2 {
+            background: #388e3c;
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            text-align: center;
+        }
+        .data-section p, .weather-section p {
+            font-size: 16px;
+            line-height: 1.6;
+        }
+        .footer {
+            background-color: #d32f2f;
+            color: white;
+            padding: 10px;
+            font-size: 14px;
+            margin-top: 20px;
+        }
+        @media (max-width: 768px) {
+            .container {
+                padding: 10px;
+            }
+            .data-section, .weather-section {
+                max-width: 100%;
+            }
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1 class="bangers-regular">Your Chosen Country</h1>
-        <h2 class="poppins-bold">Nigeria</h2>
-    </header>
-    
-    <main>
-        <section class="hero">
-            <h2 class="poppins-bold">Explore Your Country</h2> 
-            <picture>
-                <source srcset="hero-small.webp" media="(max-width: 600px)">
-                <source srcset="hero-large.webp" media="(min-width: 601px)">
-                <img src="hero-large.webp" alt="Hero Image">
-            </picture>
-        </section>
-
-        <section class="weather">
-            <h2 class="poppins-bold">Weather</h2>
-            <p>Temperature: <span id="temp">10</span>°C</p>
-            <p>Wind Speed: <span id="wind-speed">5</span> km/h</p>
-            <p>Wind Chill: <span id="wind-chill">N/A</span></p>
-            <p id="weather-icon">⛅</p>
-        </section>
-
-        <section class="info">
-            <h2 class="poppins-bold">Interesting Facts</h2>
-            <ul>
-                <li>Nigeria is the most populous country in Africa.</li>
-                <li>It has over 250 ethnic groups and 500 languages.</li>
-                <li>The country is rich in oil and natural resources.</li>
-                <li>The Nollywood film industry is the second largest in the world.</li>
-            </ul>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; | 2025 - SP Web & Software Solution - Nigeria | Sunday Prince Augustine @ Brigham Young University-Idaho</p>
-        <p>Last modified: <span id="lastModified"></span></p>
-    </footer>
+    <div class="header">Akwa Ibom State, Nigeria</div>
+    <div class="container">
+        <div class="image-section">
+            <img src="Akwa Ibom.jpg" alt="Akwa Ibom State Nigeria">
+        </div>
+        <div class="data-section">
+            <h2>Data</h2>
+            <p><strong>Area:</strong> 7,081 sq km</p>
+            <p><strong>Population:</strong> 5,450,758</p>
+            <p><strong>Capital:</strong> Uyo</p>
+            <p><strong>Languages:</strong> Ibibio, English</p>
+            <p><strong>Currency:</strong> Nigerian Naira (₦)</p>
+            <p><strong>Time Zone:</strong> UTC+1</p>
+            <p><strong>Calling Code:</strong> +234</p>
+            <p><strong>Internet TLD:</strong> .ng</p>
+        </div>
+        <div class="weather-section">
+            <h2>Weather</h2>
+            <p><strong>Temperature:</strong> 28°C</p>
+            <p><strong>Conditions:</strong> Cloudy</p>
+            <p><strong>Wind:</strong> 10 km/h</p>
+            <p><strong>Wind Chill:</strong> 27.5°C</p>
+        </div>
+    </div>
+    <div class="footer">©2024 Akwa Ibom State, Nigeria | Last Modification: 02/08/2024 22:47:47</div>
 </body>
 </html>
