"Update Place Page"

--- a/place.html
+++ b/place.html
@@ -76,7 +76,7 @@
     <div class="header">Akwa Ibom State, Nigeria</div>
     <div class="container">
         <div class="image-section">
-            <img src="Akwa Ibom.jpg" alt="Akwa Ibom State Nigeria">
+            <img src="Akwa Ibom.webp" alt="Akwa Ibom State Nigeria">
         </div>
         <div class="data-section">
             <h2>Data</h2>
