--- a/place.html
+++ b/place.html
@@ -10,74 +10,86 @@
             margin: 0;
             padding: 0;
             text-align: center;
-            background-color: #f0f0f0;
+            background: url('Akwa Ibom.webp') no-repeat center center/cover;
+            color: white;
+            height: 100vh;
         }
         .header {
             background-color: #d32f2f;
-            color: white;
             padding: 20px;
             font-size: 28px;
             font-weight: bold;
+            position: relative;
         }
-        .container {
-            padding: 20px;
-            max-width: 900px;
-            margin: 0 auto;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .image-section {
-            width: 100%;
-            max-width: 800px;
+        .content-container {
+            position: relative;
+            width: 90%;
+            max-width: 1200px;
             margin: 0 auto;
         }
-        .image-section img {
-            width: 100%;
-            border-radius: 10px;
-        }
-        .data-section, .weather-section {
-            margin: 20px auto;
+        .data-section {
+            position: absolute;
+            top: 20%;
+            left: 5%;
+            background: rgba(255, 255, 255, 0.9);
             padding: 20px;
-            max-width: 600px;
-            background: #f5f5f5;
             border-radius: 10px;
-            text-align: left;
+            color: black;
+            max-width: 300px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
-        .data-section h2, .weather-section h2 {
+        .data-section h2 {
             background: #388e3c;
             color: white;
             padding: 10px;
             border-radius: 5px;
             text-align: center;
         }
-        .data-section p, .weather-section p {
-            font-size: 16px;
-            line-height: 1.6;
+        .weather-section {
+            position: absolute;
+            top: 20%;
+            right: 5%;
+            background: rgba(52, 152, 219, 0.9);
+            padding: 20px;
+            border-radius: 10px;
+            color: white;
+            max-width: 300px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+        .weather-section h2 {
+            background: #2980b9;
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            text-align: center;
+        }
+        .weather-section img {
+            display: block;
+            margin: 0 auto 15px;
+            width: 50px;
+            height: 50px;
         }
         .footer {
             background-color: #d32f2f;
             color: white;
-            padding: 10px;
+            padding: 15px;
             font-size: 14px;
-            margin-top: 20px;
+            position: absolute;
+            bottom: 0;
+            width: 100%;
         }
         @media (max-width: 768px) {
-            .container {
-                padding: 10px;
-            }
             .data-section, .weather-section {
+                position: static;
                 max-width: 100%;
+                margin: 20px auto;
             }
         }
     </style>
 </head>
 <body>
     <div class="header">Akwa Ibom State, Nigeria</div>
-    <div class="container">
-        <div class="image-section">
-            <img src="Akwa Ibom.webp" alt="Akwa Ibom State Nigeria">
-        </div>
+    <div class="content-container">
         <div class="data-section">
             <h2>Data</h2>
             <p><strong>Area:</strong> 7,081 sq km</p>
@@ -91,6 +103,7 @@
         </div>
         <div class="weather-section">
             <h2>Weather</h2>
+            <img src="reshot.svg" alt="Weather Icon">
             <p><strong>Temperature:</strong> 28°C</p>
             <p><strong>Conditions:</strong> Cloudy</p>
             <p><strong>Wind:</strong> 10 km/h</p>
