--- a/place.html
+++ b/place.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="It contains keywords for SEO (Akwa Ibom State, Nigeria, geography, population, weather">
+    <meta name="author" content="Sunday Prince Augustine">
     <title>Akwa Ibom State, Nigeria</title>
     <style>
         body {
