--- a/place.html
+++ b/place.html
@@ -1,117 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="It contains keywords for SEO (Akwa Ibom State, Nigeria, geography, population, weather">
-    <meta name="author" content="Sunday Prince Augustine">
-    <title>Akwa Ibom State, Nigeria</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            background: url('Akwa Ibom.webp') no-repeat center center/cover;
-            color: white;
-            height: 100vh;
-        }
-        .header {
-            background-color: #d32f2f;
-            padding: 20px;
-            font-size: 28px;
-            font-weight: bold;
-            position: relative;
-        }
-        .content-container {
-            position: relative;
-            width: 90%;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-        .data-section {
-            position: absolute;
-            top: 20%;
-            left: 5%;
-            background: rgba(255, 255, 255, 0.9);
-            padding: 20px;
-            border-radius: 10px;
-            color: black;
-            max-width: 300px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-        .data-section h2 {
-            background: #388e3c;
-            color: white;
-            padding: 10px;
-            border-radius: 5px;
-            text-align: center;
-        }
-        .weather-section {
-            position: absolute;
-            top: 20%;
-            right: 5%;
-            background: rgba(52, 152, 219, 0.9);
-            padding: 20px;
-            border-radius: 10px;
-            color: white;
-            max-width: 300px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-        .weather-section h2 {
-            background: #2980b9;
-            color: white;
-            padding: 10px;
-            border-radius: 5px;
-            text-align: center;
-        }
-        .weather-section img {
-            display: block;
-            margin: 0 auto 15px;
-            width: 50px;
-            height: 50px;
-        }
-        .footer {
-            background-color: #d32f2f;
-            color: white;
-            padding: 15px;
-            font-size: 14px;
-            position: absolute;
-            bottom: 0;
-            width: 100%;
-        }
-        @media (max-width: 768px) {
-            .data-section, .weather-section {
-                position: static;
-                max-width: 100%;
-                margin: 20px auto;
-            }
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Akwa Ibom State, Nigeria: geography, population, weather info" />
+  <meta name="author" content="Sunday Prince Augustine" />
+  <title>Akwa Ibom State, Nigeria</title>
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet" />
+  <!-- External CSS -->
+  <link rel="stylesheet" href="styles/style.css" />
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      margin: 0;
+      padding: 0;
+      background: url('Akwa Ibom.webp') no-repeat center center/cover;
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .header {
+      background-color: #c62828;
+      color: white;
+      font-size: 40px;
+      font-weight: bold;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .green-bar {
+      background-color: #007a3d;
+      height: 10px;
+      width: 100%;
+    }
+
+    .content {
+      flex: 1;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 40px;
+    }
+
+    .card {
+      background: rgba(255, 255, 255, 0.95);
+      border-radius: 10px;
+      padding: 20px;
+      width: 300px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    }
+
+    .card h2 {
+      background-color: #2e7d32;
+      color: white;
+      padding: 10px;
+      border-radius: 5px;
+      margin-top: 0;
+    }
+
+    .weather-card h2 {
+      background-color: #007a3d;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+    }
+
+    .weather-card h2::after {
+      content: '⛅';
+      margin-left: 10px;
+    }
+
+    .footer {
+      background-color: #c62828;
+      color: white;
+      font-size: 14px;
+      text-align: center;
+      padding: 15px;
+    }
+
+    @media (max-width: 768px) {
+      .content {
+        flex-direction: column;
+        gap: 20px;
+      }
+    }
+  </style>
 </head>
 <body>
-    <div class="header">Akwa Ibom State, Nigeria</div>
-    <div class="content-container">
-        <div class="data-section">
-            <h2>Data</h2>
-            <p><strong>Area:</strong> 7,081 sq km</p>
-            <p><strong>Population:</strong> 5,450,758</p>
-            <p><strong>Capital:</strong> Uyo</p>
-            <p><strong>Languages:</strong> Ibibio, English</p>
-            <p><strong>Currency:</strong> Nigerian Naira (₦)</p>
-            <p><strong>Time Zone:</strong> UTC+1</p>
-            <p><strong>Calling Code:</strong> +234</p>
-            <p><strong>Internet TLD:</strong> .ng</p>
-        </div>
-        <div class="weather-section">
-            <h2>Weather</h2>
-            <img src="reshot.svg" alt="Weather Icon">
-            <p><strong>Temperature:</strong> 28°C</p>
-            <p><strong>Conditions:</strong> Cloudy</p>
-            <p><strong>Wind:</strong> 10 km/h</p>
-            <p><strong>Wind Chill:</strong> 27.5°C</p>
-        </div>
+  <div class="header">Akwa Ibom State</div>
+  <div class="green-bar"></div>
+
+  <div class="content">
+    <div class="card">
+      <h2>Data</h2>
+      <p><strong>Area:</strong> 7,081 sq km</p>
+      <p><strong>Population:</strong> 5,450,758</p>
+      <p><strong>Capital:</strong> Uyo</p>
+      <p><strong>Languages:</strong> Ibibio, English</p>
+      <p><strong>Currency:</strong> Nigerian Naira (₦)</p>
+      <p><strong>Time Zone:</strong> UTC+1</p>
+      <p><strong>Calling Code:</strong> +234</p>
+      <p><strong>Internet TLD:</strong> .ng</p>
     </div>
-    <div class="footer">©2024 Akwa Ibom State, Nigeria | Last Modification: 02/08/2024 22:47:47</div>
+
+    <div class="card weather-card">
+      <h2>Weather</h2>
+      <p><strong>Temperature:</strong> 28°C</p>
+      <p><strong>Conditions:</strong> Cloudy</p>
+      <p><strong>Wind:</strong> 10 km/h</p>
+      <p><strong>Wind Chill:</strong> 27.5°C</p>
+    </div>
+  </div>
+
+  <div class="footer">
+    ©2024 🌸 Sunday Prince Augustine 🌸 Akwa Ibom State <br>
+    Last Modification: 02/08/2024 22:47:47
+  </div>
 </body>
 </html>
