--- a/place.html
+++ b/place.html
@@ -25,8 +25,9 @@
     </header>
     <main>
         <div class="hero">
-            <picture>    
-                <img src="Akwa Ibom.webp" alt="Akwa Ibom" width="500" height="706">
+            <picture>
+                <source srcset="Ibom.webp" media="(min-width: 786px)">
+                <img src="Ibom.webp" alt="Akwa Ibom" width="500" height="706">
             </picture>
         </div>
         <section class="data">
