"Update Temples Page"

--- a/place.html
+++ b/place.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 131 – Dynamic Web Fundamentals - Country Page</title>
-    <meta name="description" content="Information about Nigeria which includes images, country data, and weather.">
+    <meta name="description" content="Information about Akwa State Nigeria which includes images, country data, and weather.">
     <meta name="author" content="Sunday Prince Augustine">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,13 +21,13 @@
 
 <body>
     <header>
-        <h1>Nigeria</h1>
+        <h1>Akwa Ibom State, Nigeria</h1>
     </header>
     <main>
         <div class="hero">
             <picture>
                 <source srcset="Ibom.webp" media="(min-width: 786px)">
-                <img src="Ibom.webp" alt="Akwa Ibom" width="500" height="706">
+                <img src="Akwa_Ibom.webp" alt="Akwa Ibom" width="500" height="706">
             </picture>
         </div>
         <section class="data">
@@ -45,8 +45,8 @@
             </div>
             <div>
                 <ul>
-                    <li>218,541,212</li>
-                    <li>Abuja</li>
+                    <li>548,541.990</li>
+                    <li>Uyo</li>
                     <li>English, Other native languages</li>
                     <li>Naira</li>
                     <li>GMT+1</li>
