--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -48,15 +48,8 @@
     </main>
 
     <footer>
-        <p>&copy;<span id="currentyear"></span>  - SP Web & Software Solution - Nigeria! Sunday Prince Augustine @Brigham Young University- Idaho</p>
-        <p class="lastM">Last Modification: <span id="lastModified"></span></p>
+        <p>&copy; | 2025 - SP Web & Software Solution - Nigeria | Sunday Prince Augustine @ Brigham Young University-Idaho</p>
+        <p>Last modified: <span id="lastModified"></span></p>
     </footer>
-    <script>
-        // JavaScript for displaying current year and last modified date
-        document.getElementById("currentyear").textContent = new Date().getFullYear();
-        document.getElementById("lastModified").textContent = document.lastModified;
-    </script>
 </body>
-
 </html>
-
