--- a/index.html
+++ b/index.html
@@ -96,8 +96,15 @@
     </main>
     
     <footer>
-        <p>&copy; <span id="currentyear"></span> 2025 - SP Web & Software Solution - Nigeria ! Sunday Prince Augustine @ Brigham Young University- Idaho</p>
-        <p id="lastModified">Last Modification: <span></span></p>
+        <p>&copy;<span id="currentyear"></span>  - SP Web & Software Solution - Nigeria! Sunday Prince Augustine @Brigham Young University- Idaho</p>
+        <p class="lastM">Last Modification: <span id="lastModified"></span></p>
     </footer>
+    <script>
+        // JavaScript for displaying current year and last modified date
+        document.getElementById("currentyear").textContent = new Date().getFullYear();
+        document.getElementById("lastModified").textContent = document.lastModified;
+    </script>
 </body>
+
 </html>
+
