"Update Filtered Page Images"

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -106,6 +106,30 @@
               <p><strong>Area:</strong> 21,744 sq ft</p>
               <img src="hong-kong.jpg" alt="Hong Kong China Temple" loading="lazy">
             </figure>
+
+            <figure>
+              <figcaption>Hong Kong China Temple</figcaption>
+              <p><strong>Location:</strong> Hong Kong, China</p>
+              <p><strong>Dedicated:</strong> May 26, 1996</p>
+              <p><strong>Area:</strong> 21,744 sq ft</p>
+              <img src="hhhh" alt="Hong Kong China Temple" loading="lazy">
+            </figure>
+
+            <figure>
+              <figcaption>Hong Kong China Temple</figcaption>
+              <p><strong>Location:</strong> Hong Kong, China</p>
+              <p><strong>Dedicated:</strong> May 26, 1996</p>
+              <p><strong>Area:</strong> 21,744 sq ft</p>
+              <img src="hhhhh" alt="Hong Kong China Temple" loading="lazy">
+            </figure>
+
+            <figure>
+              <figcaption>Hong Kong China Temple</figcaption>
+              <p><strong>Location:</strong> Hong Kong, China</p>
+              <p><strong>Dedicated:</strong> May 26, 1996</p>
+              <p><strong>Area:</strong> 21,744 sq ft</p>
+              <img src="hhhhh" alt="Hong Kong China Temple" loading="lazy">
+            </figure>
           </div>                 
     </main>
 
