"Update Filtered Page Images and Text"

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -108,27 +108,27 @@
             </figure>
 
             <figure>
-              <figcaption>Hong Kong China Temple</figcaption>
-              <p><strong>Location:</strong> Hong Kong, China</p>
-              <p><strong>Dedicated:</strong> May 26, 1996</p>
-              <p><strong>Area:</strong> 21,744 sq ft</p>
-              <img src="hhhh" alt="Hong Kong China Temple" loading="lazy">
+              <figcaption>Bengaluru India Temple</figcaption>
+              <p><strong>Location:</strong> Bengaluru, India</p>
+              <p><strong>Dedicated:</strong> June 2, 2024</p>
+              <p><strong>Area:</strong> 40,000 sq ft</p>
+              <img src="Full-Bengaluru-India-Temple.jpg" alt="Bengaluru India Temple" loading="lazy">
             </figure>
 
             <figure>
-              <figcaption>Hong Kong China Temple</figcaption>
-              <p><strong>Location:</strong> Hong Kong, China</p>
-              <p><strong>Dedicated:</strong> May 26, 1996</p>
-              <p><strong>Area:</strong> 21,744 sq ft</p>
-              <img src="hhhhh" alt="Hong Kong China Temple" loading="lazy">
+              <figcaption>Yigo Guam Temple</figcaption>
+              <p><strong>Location:</strong> Yigo, Guam</p>
+              <p><strong>Dedicated:</strong> May 22, 2022</p>
+              <p><strong>Area:</strong> 6,861 sq ft</p>
+              <img src="Yigo-Guam-Temple.jpg" alt="Yigo Guam Temple" loading="lazy">
             </figure>
 
             <figure>
-              <figcaption>Hong Kong China Temple</figcaption>
-              <p><strong>Location:</strong> Hong Kong, China</p>
-              <p><strong>Dedicated:</strong> May 26, 1996</p>
-              <p><strong>Area:</strong> 21,744 sq ft</p>
-              <img src="hhhhh" alt="Hong Kong China Temple" loading="lazy">
+              <figcaption>Cobán Guatemala Temple</figcaption>
+              <p><strong>Location:</strong> Cobán, Guatemala</p>
+              <p><strong>Dedicated:</strong> June 9, 2024</p>
+              <p><strong>Area:</strong>  8,800 sq ft</p>
+              <img src="Cobán-Guatemala-Temple.webp" alt="Cobán Guatemala Temple" loading="lazy">
             </figure>
           </div>                 
     </main>
